--- a/ClashDaemon/appsettings.json
+++ b/ClashDaemon/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ExecuteOption": {
+    "ClashPath": "",
+    "ClashArguments": ""
   }
 }
