Fix default appSetting.json

--- a/ClashDaemon/appsettings.json
+++ b/ClashDaemon/appsettings.json
@@ -5,8 +5,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ExecuteOption": {
-    "ClashPath": "",
+  "ExecuteOptions": {
+    "ClashPath": "clash.exe",
     "ClashArguments": ""
   }
 }
